--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,12 @@
 .justify-space-between {
     justify-content: space-between;
 }
+
+.nav-text-style {
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 23.48px;
+    text-decoration: none;
+}
