--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@
     display: flex;
 }
 
+.flex-direction-column {
+    flex-direction: column;
+}
+
 .flex-direction-row {
     flex-direction: row;
 }
