--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*Fonts imports*/
 @font-face {
     font-family: 'Inter';
     src: url('../fonts/Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype');
@@ -11,7 +12,9 @@
     font-weight: normal;
     font-style: normal;
 }
+/*-----------*/
 
+/*Flexbox properties*/
 .flex-container {
     display: flex;
 }
@@ -31,8 +34,10 @@
 .justify-space-between {
     justify-content: space-between;
 }
+/*------------------*/
 
-.nav-text-style {
+/*Common styles*/
+.nav-text-styles {
     color: rgba(255, 255, 255, 1);
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
@@ -40,3 +45,16 @@
     line-height: 23.48px;
     text-decoration: none;
 }
+
+.h2-title {
+    color: rgba(17, 17, 17, 1);
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 54px;
+    letter-spacing: 0em;
+    text-align: left;
+    text-transform: uppercase;
+}
+/*-------------*/
