--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@
 /*------------------*/
 
 /*Common styles*/
+body {
+    position: relative;
+}
+
 .nav-text-styles {
     color: rgba(255, 255, 255, 1);
     font-family: 'Raleway', sans-serif;
@@ -57,4 +61,100 @@
     text-align: left;
     text-transform: uppercase;
 }
+
+.inter-400, .inter-500, .inter-700 { /*Estilo de fuente común entre textos de distintas páginas de la sección 'Tienda' (sección 'Admin' todavía no revisada). Sólo cambian en las propiedades: 'color', 'font-size', 'line-height' y alguna otra de posicionamiento en caso de ser necesario.*/
+    font-family: 'Inter', sans-serif;
+    letter-spacing: 0em;
+    text-align: left;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.inter-400 {
+    font-weight: 400;
+}
+
+.inter-500 {
+    font-weight: 500;
+}
+
+.inter-700 {
+    font-weight: 700;
+}
 /*-------------*/
+
+/*Estilos comunes entre cartas de productos entre distintas páginas*/
+
+.card {
+    height: 100%;
+}
+
+.card__product {
+    position: relative;
+}
+
+.card__image {
+    display: inline-block;
+    width: 100%;
+}
+
+.card__img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.card__status {
+    background: rgba(255, 51, 51, 1);
+    box-sizing: border-box;
+    color: rgba(255, 255, 255, 1);
+    display: inline-block;
+    font-size: 14px;
+    height: 30px;
+    line-height: 16.94px;
+    padding-top: 7px;
+    padding-bottom: 6px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.card__content {
+    height: 160px;
+    position: relative;
+    width: 100%;
+}
+
+.card__category {
+    color: rgba(51, 51, 51, 1);
+    display: inline-block;
+    font-size: 14px;
+    line-height: 16.94px;
+    position: absolute;
+    top: 28px;
+}
+
+.card__product-name {
+    color: rgba(17, 17, 17, 1);
+    font-size: 18px;
+    line-height: 21.78px;
+    position: absolute;
+    top: 58px;
+}
+
+.card__price {
+    color: rgba(51, 51, 51, 1);
+    font-size: 16px;
+    line-height: 19.36px;
+    position: absolute;
+    top: 93px;
+}
+
+.card__installments {
+    color: rgba(29, 132, 181, 1);
+    font-size: 12px;
+    line-height: 15px;
+    position: absolute;
+    top: 126px;
+}
+/*----------------------------------------------------------------*/
