--- a/css/shop_main.css
+++ b/css/shop_main.css
@@ -46,8 +46,8 @@ footer {
     height: 1608px;
     justify-content: space-between;
     left: 0;
+    margin-top: 68px;
     position: relative;
-    top: 68px;
     width: 960.03px;
 }
 
@@ -80,7 +80,14 @@ footer {
 .pagination {
     background-color: darkgoldenrod;
     height: 44px;
-    margin-top: 100px;
+    margin: 68px 413.67px 68px auto;
     position: relative;
     width: 356px;
+}
+
+.pagination__item {
+    background-color: cadetblue;
+    height: 44px;
+    list-style-type: none;
+    width: 44px;
 }
