--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,12 @@
 .justify-space-between {
     justify-content: space-between;
 }
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
 /*------------------*/
 
 /*Common styles*/
